refactor: cleanup and update project structure
- Remove auth package, consolidate into db package
- Update env configuration for Next.js
- Clean up unused routes and components
- Update dependencies and configurations
- Add AGENTS.md documentation

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "auth:generate": "pnpm -F @acme/auth generate",
     "db:push": "turbo -F @acme/db push",
     "db:studio": "turbo -F @acme/db studio",
+    "db:local": "docker compose up -d",
     "dev": "turbo watch dev --continue",
     "dev:next": "turbo watch dev -F @acme/nextjs...",
     "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
