--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -18,11 +18,14 @@
     "@better-auth/expo": "1.2.12",
     "@expo/metro-config": "^0.20.14",
     "@legendapp/list": "^1.0.15",
+    "@rn-primitives/portal": "^1.3.0",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
     "better-auth": "1.2.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "53.0.9",
     "expo-constants": "17.1.6",
     "expo-dev-client": "5.1.8",
@@ -41,7 +44,9 @@
     "react-native-reanimated": "~3.18.0",
     "react-native-safe-area-context": "~5.4.1",
     "react-native-screens": "~4.11.1",
-    "superjson": "2.2.2"
+    "superjson": "2.2.2",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@acme/api": "workspace:*",
