--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -18,6 +18,7 @@
     "@better-auth/expo": "1.2.12",
     "@expo/metro-config": "^0.20.14",
     "@legendapp/list": "^1.0.15",
+    "@rn-primitives/popover": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/slot": "^1.2.0",
     "@tanstack/react-query": "catalog:",
