--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -26,6 +26,7 @@
     "next": "^15.3.3",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
+    "resend": "^6.6.0",
     "superjson": "2.2.2",
     "zod": "catalog:"
   },
