--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -21,6 +21,7 @@
     "@rn-primitives/popover": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@tanstack/react-form": "^1.27.6",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
