--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -12,11 +12,12 @@
     "ios": "expo run:ios",
     "format": "prettier --check . --ignore-path ../../.gitignore --ignore-path .prettierignore",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "build:android:local": "eas build --platform android --profile development --local"
   },
   "dependencies": {
+    "@acme/db": "workspace:*",
     "@better-auth/expo": "1.2.12",
-    "@expo/metro-config": "^0.20.14",
     "@legendapp/list": "^1.0.15",
     "@rn-primitives/popover": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
@@ -29,24 +30,24 @@
     "better-auth": "1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "53.0.9",
-    "expo-constants": "17.1.6",
-    "expo-dev-client": "5.1.8",
-    "expo-linking": "7.1.5",
-    "expo-router": "5.0.7",
-    "expo-secure-store": "14.2.3",
-    "expo-splash-screen": "0.30.8",
-    "expo-status-bar": "2.2.3",
-    "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "14.1.6",
+    "expo": "54.0.30",
+    "expo-constants": "18.0.12",
+    "expo-dev-client": "6.0.20",
+    "expo-linking": "8.0.11",
+    "expo-router": "6.0.21",
+    "expo-secure-store": "15.0.8",
+    "expo-splash-screen": "31.0.13",
+    "expo-status-bar": "3.0.9",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "15.0.10",
     "nativewind": "~4.1.23",
-    "react": "catalog:react19",
-    "react-dom": "catalog:react19",
-    "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.25.0",
-    "react-native-reanimated": "~3.18.0",
-    "react-native-safe-area-context": "~5.4.1",
-    "react-native-screens": "~4.11.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.6",
+    "react-native-safe-area-context": "~5.6.2",
+    "react-native-screens": "~4.16.0",
     "superjson": "2.2.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
@@ -61,11 +62,13 @@
     "@babel/preset-env": "^7.27.2",
     "@babel/runtime": "^7.27.4",
     "@types/babel__core": "^7.20.5",
-    "@types/react": "catalog:react19",
+    "@types/react": "^19.1.17",
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-kit": "^0.31.1",
     "eslint": "catalog:",
     "prettier": "catalog:",
     "tailwindcss": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "~5.9.3"
   },
   "prettier": "@acme/prettier-config"
 }
