--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,6 +15,10 @@
     "./schema": {
       "types": "./dist/schema.d.ts",
       "default": "./src/schema.ts"
+    },
+    "./migrations": {
+      "types": "./drizzle/migrations.d.ts",
+      "default": "./drizzle/migrations.js"
     }
   },
   "license": "MIT",
@@ -24,6 +28,7 @@
     "dev": "tsc",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
+    "generate": "drizzle-kit generate",
     "push": "pnpm with-env drizzle-kit push",
     "studio": "pnpm with-env drizzle-kit studio",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
