--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -19,9 +19,11 @@
     "@acme/db": "workspace:*",
     "@better-auth/expo": "1.2.12",
     "@legendapp/list": "^1.0.15",
+    "@rn-primitives/hooks": "^1.3.0",
     "@rn-primitives/popover": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/types": "^1.2.0",
     "@tanstack/react-form": "^1.27.6",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
@@ -40,7 +42,7 @@
     "expo-status-bar": "3.0.9",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "15.0.10",
-    "nativewind": "~4.1.23",
+    "nativewind": "~4.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
