--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -22,16 +22,20 @@
     "@rn-primitives/hooks": "^1.3.0",
     "@rn-primitives/popover": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/select": "^1.2.0",
+    "@rn-primitives/slider": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/types": "^1.2.0",
     "@tanstack/react-form": "^1.27.6",
     "@tanstack/react-query": "catalog:",
+    "@tanstack/zod-form-adapter": "^0.42.1",
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
     "better-auth": "1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.5",
     "expo": "54.0.30",
     "expo-constants": "18.0.12",
     "expo-dev-client": "6.0.20",
@@ -39,6 +43,7 @@
     "expo-router": "6.0.21",
     "expo-secure-store": "15.0.8",
     "expo-splash-screen": "31.0.13",
+    "expo-sqlite": "^16.0.7",
     "expo-status-bar": "3.0.9",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "15.0.10",
@@ -52,7 +57,8 @@
     "react-native-screens": "~4.16.0",
     "superjson": "2.2.2",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@acme/api": "workspace:*",
