--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@acme/db": "workspace:*",
+    "@acme/translations": "workspace:*",
     "@better-auth/expo": "1.2.12",
     "@legendapp/list": "^1.0.15",
     "@rn-primitives/hooks": "^1.3.0",
