--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -13,13 +13,17 @@
     "format": "prettier --check . --ignore-path ../../.gitignore --ignore-path .prettierignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
-    "build:android:local": "eas build --platform android --profile development --local"
+    "build:android:local": "eas build --platform android --profile development --local",
+    "build:android": "eas build --platform android --profile development",
+    "build:ios": "eas build --platform ios --profile development",
+    "build:all": "eas build --platform all --profile development"
   },
   "dependencies": {
     "@acme/db": "workspace:*",
     "@acme/translations": "workspace:*",
     "@better-auth/expo": "1.2.12",
     "@legendapp/list": "^1.0.15",
+    "@rn-primitives/accordion": "^1.2.0",
     "@rn-primitives/hooks": "^1.3.0",
     "@rn-primitives/popover": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
@@ -48,6 +52,7 @@
     "expo-status-bar": "3.0.9",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "15.0.10",
+    "lucide-react-native": "^0.562.0",
     "nativewind": "~4.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -57,6 +62,7 @@
     "react-native-reanimated": "~4.1.6",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
     "superjson": "2.2.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
