feat(expo): add build profiles and documentation
- Add preview/production build scripts to package.json
- Configure eas.json with APK for preview, app-bundle for production
- Create README with build guide and decision flowchart

--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -19,12 +19,15 @@
     "preview": {
       "extends": "base",
       "distribution": "internal",
-      "ios": {
-        "simulator": true
+      "android": {
+        "buildType": "apk"
       }
     },
     "production": {
-      "extends": "base"
+      "extends": "base",
+      "android": {
+        "buildType": "app-bundle"
+      }
     }
   },
   "submit": {
