--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -13,10 +13,16 @@
     "format": "prettier --check . --ignore-path ../../.gitignore --ignore-path .prettierignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
-    "build:android:local": "eas build --platform android --profile development --local",
-    "build:android": "eas build --platform android --profile development",
-    "build:ios": "eas build --platform ios --profile development",
-    "build:all": "eas build --platform all --profile development"
+    "build:dev": "eas build --profile development",
+    "build:dev:android": "eas build --platform android --profile development",
+    "build:dev:ios": "eas build --platform ios --profile development",
+    "build:dev:local": "eas build --platform android --profile development --local",
+    "build:preview": "eas build --profile preview",
+    "build:preview:android": "eas build --platform android --profile preview",
+    "build:preview:ios": "eas build --platform ios --profile preview",
+    "build:prod": "eas build --profile production",
+    "build:prod:android": "eas build --platform android --profile production",
+    "build:prod:ios": "eas build --platform ios --profile production"
   },
   "dependencies": {
     "@acme/db": "workspace:*",
