--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -23,7 +23,7 @@
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
-    "next": "^15.3.3",
+    "next": "15.3.8",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
     "resend": "^6.6.0",
