fix(expo): set APP_VARIANT in build scripts for local config parsing

--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -13,16 +13,16 @@
     "format": "prettier --check . --ignore-path ../../.gitignore --ignore-path .prettierignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
-    "build:dev": "eas build --profile development",
-    "build:dev:android": "eas build --platform android --profile development",
-    "build:dev:ios": "eas build --platform ios --profile development",
-    "build:dev:local": "eas build --platform android --profile development --local",
-    "build:preview": "eas build --profile preview",
-    "build:preview:android": "eas build --platform android --profile preview",
-    "build:preview:ios": "eas build --platform ios --profile preview",
-    "build:prod": "eas build --profile production",
-    "build:prod:android": "eas build --platform android --profile production",
-    "build:prod:ios": "eas build --platform ios --profile production"
+    "build:dev": "APP_VARIANT=development eas build --profile development",
+    "build:dev:android": "APP_VARIANT=development eas build --platform android --profile development",
+    "build:dev:ios": "APP_VARIANT=development eas build --platform ios --profile development",
+    "build:dev:local": "APP_VARIANT=development eas build --platform android --profile development --local",
+    "build:preview": "APP_VARIANT=preview eas build --profile preview",
+    "build:preview:android": "APP_VARIANT=preview eas build --platform android --profile preview",
+    "build:preview:ios": "APP_VARIANT=preview eas build --platform ios --profile preview",
+    "build:prod": "APP_VARIANT=production eas build --profile production",
+    "build:prod:android": "APP_VARIANT=production eas build --platform android --profile production",
+    "build:prod:ios": "APP_VARIANT=production eas build --platform ios --profile production"
   },
   "dependencies": {
     "@acme/db": "workspace:*",
